# simlab

./: .env  .gitignore  CHANGELOG.md  LICENSE  QUICKSTART.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
cookbook/: README.md
cookbook/agent-baselining/: SKILL.md  agent-baselining.md
cookbook/claude-agent-sdk/: README.md  SKILL.md  claude-agent-sdk.md  pyproject.toml
cookbook/claude-agent-sdk/src/claude_agent_sdk_cookbook/: __init__.py  custom_agent.py  simlab_adapter.py
cookbook/claude-agent-sdk/tests/: test_claude_agent_sdk_simlab_adapter.py
cookbook/google-adk/: README.md  SKILL.md  google-adk.md  pyproject.toml
cookbook/google-adk/src/google_adk_agent/: __init__.py  custom_agent.py  simlab_adapter.py
cookbook/google-adk/tests/: test_google_adk_simlab_adapter.py
cookbook/langgraph-email-agent/: README.md  SKILL.md  langgraph-email-agent.md  pyproject.toml
cookbook/langgraph-email-agent/tests/: test_email_assistant.py  test_langgraph_simlab_adapter.py  test_simlab_adapter.py
cookbook/langgraph-vendor-agent/: README.md  pyproject.toml
cookbook/langgraph-vendor-agent/examples/task-bundle/tasks/: procurement_audit.json
cookbook/langgraph-vendor-agent/examples/task-bundle/verifiers/: __init__.py  procurement_audit.py  vendor_erp_review.py
cookbook/langgraph-vendor-agent/examples/vendor-mgmt/: env.yaml
cookbook/langgraph-vendor-agent/src/langgraph_vendor_agent/: __init__.py  plan_and_execute.py  simlab_adapter.py
cookbook/langgraph-vendor-agent/tests/: test_create_agent_compat.py  test_vendor_agent.py
cookbook/openai-agents-sdk/: README.md  SKILL.md  openai-agents-sdk.md  pyproject.toml
cookbook/openai-agents-sdk/src/openai_agents_sdk/: __init__.py  custom_agent.py  simlab_adapter.py
cookbook/openai-agents-sdk/tests/: test_customer_agent.py  test_openai_agents_sdk_simlab_adapter.py
cookbook/persona-recipe/: SKILL.md  persona-recipe.md
cookbook/prime-rl-training/: .gitignore  SKILL.md  prime-rl-training.md  pyproject.toml  run_pipeline.sh
cookbook/prime-rl-training/configs/: rl.toml  sft.toml
cookbook/prime-rl-training/examples/task-bundle/: 3_triage_and_escalate_critical_billing_discrepancy_for_enterprise_renewal_35ba835d.json  4_enterprise_client_escalation_resolve_david_parks_api_rate_limiting_issue_and_pre_de0cff0d.json  6_resolve_sla_critical_billing_dispute_for_wilson_retail_group_and_coordinate_acco_7a7bbde0.json
cookbook/prime-rl-training/prime-envs/simlab_tasks/: pyproject.toml  simlab_tasks.py
cookbook/prime-rl-training/src/prime_rl_training/: __init__.py  collect.py  simlab_env.py  trajectory_converter.py
cookbook/secure-agent-eval/: SKILL.md  naive_agent.py  secure-agent-eval.md  setup.sh
cookbook/simlab-auto-research/: .gitignore  README.md  SKILL.md  pyproject.toml  run_experiment.sh  simlab-auto-research.md  system-prompt.md
cookbook/simlab-auto-research/src/simlab_auto_research/: __init__.py  configurable_agent.py
cookbook/simlab-auto-research/tests/: test_configurable_agent.py
cookbook/tinker-sft/: SKILL.md  run.sh  tinker-sft.md
cookbook/tinker-sft/scripts/: eval_agent.py  export_sft.py  fetch_tool_schema.py  patch_taskgen_config.py  run_eval.sh  train_sft.py
cookbooks/langgraph-vendor-agent/tests/: test_vendor_agent.py
docs/: README.md  agent-integrations.md  custom-mcp-servers.md  custom-tools.md  daytona.md  global-config.md  harbor.md  task-generation.md  troubleshooting.md  verifiers.md
examples/: README.md  mcp-servers-command-only.json  mcp-servers-local-demo.json  mcp-servers-mixed.json  mcp-servers-url-only.json
examples/custom-cli-tools/: README.md  docker-compose.yml  env.yaml
examples/demo-mcp-server/: Dockerfile  README.md  server.py
examples/harbor/: README.md
examples/tasks/: list-tools.json
output/agent_run_generated-task_20260318_055320/: artifacts.json
output/agent_run_generated-task_20260318_065159/: artifacts.json
output/agent_run_generated-task_20260319_170544/: artifacts.json
output/agent_run_generated-task_20260324_024350/: artifacts.json
output/agent_run_generated-task_20260327_030652/: artifacts.json
output/agent_run_generated-task_20260327_040334/: artifacts.json
output/agent_run_generated-task_20260327_042505/: artifacts.json
output/agent_run_generated-task_20260327_042506/: artifacts.json
output/agent_run_generated-task_20260330_223727/: artifacts.json
output/agent_run_generated-task_20260401_191233/: artifacts.json
output/agent_run_generated-task_20260403_153725/: artifacts.json
output/agent_run_generated-task_20260403_220304/: artifacts.json
output/agent_run_generated-task_20260408_013245/: artifacts.json
output/agent_run_generated-task_20260415_204610/: artifacts.json
output/agent_run_generated-task_20260415_210354/: artifacts.json
skills/cookbook-builder/: SKILL.md  cookbook-conventions.md
src/simlab/: __init__.py  config.py  env_artifacts.py  env_custom_tools.py  env_registry.py  evaluation.py  mcp_config.py  run_summary.py  runs_history.py  telemetry.py
src/simlab/agents/: base.py  (+7 more)
taskgen/: cs-config.toml
tests/: __init__.py  adapter_contract.py  conftest.py  test_agent_runner.py  test_autoresearch_analysis.py  test_autoresearch_cli_envdir.py  test_autoresearch_cli_init.py  test_autoresearch_cli_quickstart.py  test_autoresearch_config.py  test_autoresearch_manager.py  test_autoresearch_manager_crash.py  test_autoresearch_manager_key_gating.py  test_autoresearch_objectives.py  test_autoresearch_propose.py  test_autoresearch_report.py  test_autoresearch_telemetry.py  test_claude_agent_adapter.py  test_cli_help.py  test_compose_engine.py  test_config.py  test_daytona_runner.py  test_env_artifacts.py  test_env_cli.py  test_eval_cli.py  test_feedback_cli.py  test_gateway.py  test_google_adk_adapter.py  test_harbor_adapter.py  test_langchain_adapter.py  test_lazy_imports.py  test_main_cli.py  test_mcp_config.py  test_npc_chat.py  test_npc_config.py  test_openai_agents_adapter.py  test_parallel_daytona.py  test_progress.py  test_quickstart.py  test_rollout_metrics.py  test_rollout_runner_step_callbacks.py  (+11 more)
(+149 files in other folders)
