[project]
name = "simlab"
version = "0.1.0"
description = "CLI for browsing tool servers and generating docker-compose environments"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "questionary>=2.0",
    "tomli>=2.0",
    "tomli-w>=1.0",
    "requests>=2.28",
    "litellm>=1.80.0",
    "openai>=1.0.0",
    "daytona",
    "types-requests>=2.32.4.20260107",
    "types-pyyaml>=6.0.12.20250915",
]

[project.optional-dependencies]
daytona = [
    "daytona",
]

[project.scripts]
simlab = "simlab.cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/simlab"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
