[project]
name = "langgraph-vendor-agent"
version = "0.1.0"
description = "Plan-and-execute LangGraph agent for vendor management with SimLab ERP and email tools"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.0",
    "langgraph>=0.3.0",
    "pydantic>=2.0",
    "simulationlab",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/langgraph_vendor_agent"]

[tool.uv.sources]
simulationlab = { path = "../..", editable = true }

[dependency-groups]
dev = [
    "pytest>=9.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["INP001"]
