[project]
name = "openai-agents-sdk"
version = "0.2.0"
description = "Customer-style OpenAI Agents SDK app with a SimLab BaseAgent adapter"
readme = "openai-agents-sdk.md"
requires-python = ">=3.13"
dependencies = [
    "openai-agents>=0.9.0",
    "simulationlab",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/openai_agents_sdk"]

[tool.uv.sources]
simulationlab = { path = "../..", editable = true }

[dependency-groups]
dev = [
    "pytest>=9.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["INP001"]
