[project]
name = "prime-rl-training"
version = "0.1.0"
description = "SimLab cookbook: train agents with Prime Intellect's prime-rl using SimLab trajectories"
readme = "prime-rl-training.md"
requires-python = ">=3.13"
dependencies = [
    "simulationlab",
    "datasets>=3.0",
    "huggingface-hub>=0.25",
    "prime",
    "verifiers>=0.1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/prime_rl_training"]

[tool.uv.sources]
simulationlab = { path = "../..", editable = true }

[dependency-groups]
dev = [
    "pytest>=9.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["INP001"]
