[project]
name = "simlab-auto-research"
version = "0.2.0"
description = "Autonomous prompt optimization for SimLab agents using the auto-research pattern"
readme = "simlab-auto-research.md"
requires-python = ">=3.13"
dependencies = [
    "simulationlab[daytona]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/simlab_auto_research"]

[tool.uv.sources]
simulationlab = { path = "../..", editable = true }

[dependency-groups]
dev = [
    "pytest>=9.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["INP001"]
